<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addkey.AddKeyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="0dp"
            app:titleTextColor="?attr/colorOnPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:hint="@string/hint_location"
            app:boxBackgroundColor="?colorSurface"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_edit"
            app:startIconDrawable="@drawable/ic_location">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <!--        <LinearLayout-->
        <!--            android:id="@+id/layout_location"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="56dp"-->
        <!--            android:background="?attr/colorPrimary"-->
        <!--            android:gravity="center_vertical"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--            <ImageView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="@dimen/keyline_4"-->
        <!--                android:src="@drawable/ic_location"-->
        <!--                app:tint="?attr/colorOnPrimary" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/tv_current_location"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="@dimen/keyline_4"-->
        <!--                android:layout_marginEnd="@dimen/keyline_4"-->
        <!--                android:text="None"-->
        <!--                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"-->
        <!--                android:textColor="?attr/colorOnPrimary" />-->

        <!--        </LinearLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_4"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_marginRight="@dimen/keyline_4"
            android:layout_marginBottom="@dimen/keyline_2"
            android:hint="@string/hint_name"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_key"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_4"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_marginRight="@dimen/keyline_4"
            android:layout_marginBottom="@dimen/keyline_2"
            android:hint="@string/hint_key"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            style="?attr/materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_marginRight="@dimen/keyline_4"
            android:layout_marginBottom="@dimen/keyline_2"
            android:text="@string/action_add"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_key" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:text="@string/action_cancel"
            app:layout_constraintRight_toLeftOf="@id/btn_add"
            app:layout_constraintTop_toBottomOf="@id/edit_key" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
